--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@types/katex": "^0.16.8",
     "autoprefixer": "^10.4.24",
+    "dompurify": "^3.3.1",
     "katex": "^0.16.28",
     "lucide-react": "^0.564.0",
     "postcss": "^8.5.6",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
